// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нормально отрендериться список табов в отзывах c кредитами вместо видео 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,credit",
        "name": "bank-promo",
        "title": "Кредиты",
        "url": "link/bank-promo/?",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах cars 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?parent_category=cars&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?section=all",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах cars с маркой 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?mark=bmw&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=bmw&parent_category=cars&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=bmw&section=all",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=bmw&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=bmw",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=bmw",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах cars с маркой и моделью 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?mark=bmw&model=1er&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=bmw&model=1er&parent_category=cars&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=bmw&section=all",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=bmw&model=1er&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=bmw&model=1er",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=bmw&model=1er",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах cars с маркой, моделью, поколением 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?mark=bmw&model=1er&super_gen=7707451&category=cars",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,catalog",
        "name": "catalog",
        "title": "Каталог",
        "url": "link/catalog/?mark=bmw&model=1er&parent_category=cars&super_gen=7707451&category=cars&sort_offers=updateDate-DESC",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,dealers",
        "name": "dealers",
        "title": "Дилеры",
        "url": "link/dealers-listing/?mark=bmw&section=all",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=bmw&model=1er&super_gen=7707451&parent_category=cars&category=",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,video",
        "name": "video",
        "title": "Видео",
        "url": "link/video/?category=cars&mark=bmw&model=1er&super_gen=7707451",
      },
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,stats",
        "name": "stats",
        "title": "Статистика цен",
        "url": "link/stats/?category=cars&mark=bmw&model=1er&super_gen=7707451",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах moto 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=motorcycle&parent_category=moto",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=moto&category=motorcycle",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах moto без категории 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?parent_category=moto&category=motorcycle",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=moto&category=motorcycle",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах moto с маркой 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=motorcycle&mark=bmw&parent_category=moto",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=bmw&parent_category=moto&category=motorcycle",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах moto с маркой и моделью 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=motorcycle&mark=bmw&model=f_650_gs&parent_category=moto",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=bmw&model=f_650_gs&parent_category=moto&category=motorcycle",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах trucks 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=bus&parent_category=trucks",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?parent_category=trucks&category=bus",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах trucks с маркой 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=bus&mark=neoplan&parent_category=trucks",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=neoplan&parent_category=trucks&category=bus",
      },
    ]
  }
/>
`;

exports[`должен нормально отрендериться список табов в отзывах trucks с маркой и моделью 1`] = `
<ServiceNavigation
  cookies={Object {}}
  dispatch={[Function]}
  navigationItems={
    Array [
      Object {
        "active": false,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,all",
        "name": "listing",
        "title": "Объявления",
        "url": "link/listing/?category=bus&mark=neoplan&model=spaceliner&parent_category=trucks",
      },
      Object {
        "active": true,
        "hasNewBadge": false,
        "hasPromo": false,
        "hasPromoDot": false,
        "metrika": "tabs,opinions",
        "name": "reviews",
        "title": "Отзывы",
        "url": "link/reviews/?mark=neoplan&model=spaceliner&parent_category=trucks&category=bus",
      },
    ]
  }
/>
`;
